fix suppression align-items strech box card

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -74,7 +74,7 @@ h2{
   // display: flex;
   align-items: center;
   justify-content: center;
-  align-items: stretch;
+  // align-items: stretch;
   place-self: center;
   box-shadow: 3px 3px 7px 2px #4054b2;
   // width: 100%;
